# or_cdchomp

./: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  manifest.xml  package.xml  setup.py
pythonsrc/orcdchomp/: __init__.py  orcdchomp.py
scripts/: barrettwam_withspheres.robot.xml  test_wam7.py
src/: orcdchomp.cpp  orcdchomp_kdata.cpp  orcdchomp_kdata.h  orcdchomp_mod.cpp  orcdchomp_mod.h  orcwrap.cpp  orcwrap.h
src/libcd/: chomp.c  chomp.h  grid.c  grid.h  grid_flood.c  grid_flood.h  kin.c  kin.h  mat.c  mat.h  os.c  os.h  spatial.c  spatial.h  util.c  util.h  util_shparse.c  util_shparse.h
